cmake_minimum_required(VERSION 3.12.4)

set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VESRION 0.0.${PATCH_VERSION})

project(hw3_doxygen VERSION ${PROJECT_VESRION})

set(CMAKE_CXX_STANDARD 17)

set(SRC_PATH "src/")
set(CMAKE_EXE_LINKER_FLAGS " -static")
include_directories("src/")
include_directories("include/")

add_executable(print_ip ${SRC_PATH}/main.cpp)
target_link_libraries(print_ip -static-libgcc -static-libstdc++)

# enable_testing()
# add_subdirectory(test)
install(TARGETS print_ip RUNTIME DESTINATION bin)

#target package
set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT example@example.com)
include(CPack)
